--- a/src/backend/gl/Cargo.toml
+++ b/src/backend/gl/Cargo.toml
@@ -25,13 +25,14 @@ bitflags = "1"
 log = { version = "0.4" }
 gfx-hal = { path = "../../hal", version = "0.2" }
 smallvec = "0.6"
-glow = { git = "https://github.com/grovesNL/glow", rev = "abc536c6b9b6a96c7f6c758d938fcb38f9b55938" }
+#glow = { git = "https://github.com/grovesNL/glow", rev = "abc536c6b9b6a96c7f6c758d938fcb38f9b55938" }
+glow = { git = "https://github.com/grovesNL/glow", rev = "82260e3f01b3da60e529994055f481a2dc7e7635" }
 spirv_cross = { version = "0.14.0", features = ["glsl"] }
 lazy_static = "1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-glutin = { version = "0.21", optional = true }
-winit = { version = "0.19", optional = true }
+glutin = { version = "0.22.0-alpha1", optional = true }
+winit = { version = "0.20.0-alpha2", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3.6"
